ad xataca articles

--- a/output/Primer_anio/English/1 - Technical English I 2024/Unit 1 - Work/index.html
+++ b/output/Primer_anio/English/1 - Technical English I 2024/Unit 1 - Work/index.html
@@ -4,26 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Primer_anio/English/1 - Technical English I 2024/Unit 1 - Work</title>
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 1rem; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 0.5rem; font-size: 1.1rem; }
-    a { text-decoration: none; color: #007acc; }
-    a:hover { text-decoration: underline; }
-  </style>
+  <link rel="stylesheet" href="../../../../../css/main.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <h1>Primer_anio/English/1 - Technical English I 2024/Unit 1 - Work</h1>
-  <ul>
-<li>📄 <a href="1 - Unit 1 - Work.pdf">1 - Unit 1 - Work.pdf</a></li>
-<li>📄 <a href="2 - Unit 1 - Work 1.pdf">2 - Unit 1 - Work 1.pdf</a></li>
-<li>📦 <a href="2 - Unit 1 – Work 1 - Practice Answers.docx">2 - Unit 1 – Work 1 - Practice Answers.docx</a></li>
-<li>📄 <a href="2 - Unit 1 – Work 1 - Practice Answers.pdf">2 - Unit 1 – Work 1 - Practice Answers.pdf</a></li>
-<li>📦 <a href="3 - A software development company.docx">3 - A software development company.docx</a></li>
-<li>📦 <a href="4 - Unit 1 - Work - Practice.docx">4 - Unit 1 - Work - Practice.docx</a></li>
-<li>📁 <a href="Language Reference - Extra Practice/index.html">Language Reference - Extra Practice</a></li>
-<li>📁 <a href="Unit 1 - Pronunciation/index.html">Unit 1 - Pronunciation</a></li>
-<li>📁 <a href="Unit 1 - Work - Audio Files/index.html">Unit 1 - Work - Audio Files</a></li>
+<ul>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="1 - Unit 1 - Work.pdf">1 - Unit 1 - Work.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="2 - Unit 1 - Work 1.pdf">2 - Unit 1 - Work 1.pdf</a></li>
+<li><span class="material-icons" style="color:#1565c0">description</span> <a href="2 - Unit 1 – Work 1 - Practice Answers.docx">2 - Unit 1 – Work 1 - Practice Answers.docx</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="2 - Unit 1 – Work 1 - Practice Answers.pdf">2 - Unit 1 – Work 1 - Practice Answers.pdf</a></li>
+<li><span class="material-icons" style="color:#1565c0">description</span> <a href="3 - A software development company.docx">3 - A software development company.docx</a></li>
+<li><span class="material-icons" style="color:#1565c0">description</span> <a href="4 - Unit 1 - Work - Practice.docx">4 - Unit 1 - Work - Practice.docx</a></li>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="Language Reference - Extra Practice/index.html">Language Reference - Extra Practice</a></li>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="Unit 1 - Pronunciation/index.html">Unit 1 - Pronunciation</a></li>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="Unit 1 - Work - Audio Files/index.html">Unit 1 - Work - Audio Files</a></li>
   </ul>
+  <nav>
+    <a href="../index.html">⬅ Atrás</a> | 
+    <a href="../../../../index.html">🏠 Inicio</a>
+  </nav>
+
 </body>
 </html>
