--- a/output/Primer_anio/English/1 - Technical English I 2024/Unit 2 - IT History/index.html
+++ b/output/Primer_anio/English/1 - Technical English I 2024/Unit 2 - IT History/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Primer_anio/English/1 - Technical English I 2024/Unit 2 - IT History</title>
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 1rem; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 0.5rem; font-size: 1.1rem; }
-    a { text-decoration: none; color: #007acc; }
-    a:hover { text-decoration: underline; }
-  </style>
+  <link rel="stylesheet" href="../../../../../css/main.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <h1>Primer_anio/English/1 - Technical English I 2024/Unit 2 - IT History</h1>
-  <ul>
+<ul>
   </ul>
+  <nav>
+    <a href="../index.html">⬅ Atrás</a> | 
+    <a href="../../../../index.html">🏠 Inicio</a>
+  </nav>
+
 </body>
 </html>
