--- a/output/Primer_anio/English/1 - Technical English I 2024/index.html
+++ b/output/Primer_anio/English/1 - Technical English I 2024/index.html
@@ -4,41 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Primer_anio/English/1 - Technical English I 2024</title>
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 1rem; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 0.5rem; font-size: 1.1rem; }
-    a { text-decoration: none; color: #007acc; }
-    a:hover { text-decoration: underline; }
-  </style>
+  <link rel="stylesheet" href="../../../../css/main.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <h1>Primer_anio/English/1 - Technical English I 2024</h1>
-  <ul>
-<li>🔊 <a href="BP_A1_CB_049_TkP1_01.mp3">BP_A1_CB_049_TkP1_01.mp3</a></li>
-<li>🔊 <a href="BP_A1_CB_050_TkP1_02.mp3">BP_A1_CB_050_TkP1_02.mp3</a></li>
-<li>🔊 <a href="BP_A1_CB_051_TkP1_03.mp3">BP_A1_CB_051_TkP1_03.mp3</a></li>
-<li>🔊 <a href="BP_A1_CB_052_TkP1_04.mp3">BP_A1_CB_052_TkP1_04.mp3</a></li>
-<li>🔊 <a href="BP_A1_CB_053_TkP1_05.mp3">BP_A1_CB_053_TkP1_05.mp3</a></li>
-<li>🔊 <a href="BP_A1_CB_054_TkP1_06.mp3">BP_A1_CB_054_TkP1_06.mp3</a></li>
-<li>🔊 <a href="BP_A1_CB_055_TkP1_07.mp3">BP_A1_CB_055_TkP1_07.mp3</a></li>
-<li>🔊 <a href="BP_A1_CB_056_TkP1_08.mp3">BP_A1_CB_056_TkP1_08.mp3</a></li>
-<li>🔊 <a href="BP_A1_CB_057_TkP2_01.mp3">BP_A1_CB_057_TkP2_01.mp3</a></li>
-<li>🔊 <a href="BP_A1_CB_058_TkP2_02.mp3">BP_A1_CB_058_TkP2_02.mp3</a></li>
-<li>🔊 <a href="BP_A1_CB_059_TkP2_03.mp3">BP_A1_CB_059_TkP2_03.mp3</a></li>
-<li>🔊 <a href="BP_A1_CB_060_TkP2_04.mp3">BP_A1_CB_060_TkP2_04.mp3</a></li>
-<li>🔊 <a href="BP_A1_CB_061_TkP2_05.mp3">BP_A1_CB_061_TkP2_05.mp3</a></li>
-<li>🔊 <a href="BP_A1_CB_062_TkP2_06.mp3">BP_A1_CB_062_TkP2_06.mp3</a></li>
-<li>🔊 <a href="BP_A1_CB_063_TkP2_07.mp3">BP_A1_CB_063_TkP2_07.mp3</a></li>
-<li>🔊 <a href="BP_A1_CB_064_TkP2_08.mp3">BP_A1_CB_064_TkP2_08.mp3</a></li>
-<li>📦 <a href="Technical English I 2024_.docx">Technical English I 2024_.docx</a></li>
-<li>📄 <a href="Unit 1 - Pronunciation.pdf">Unit 1 - Pronunciation.pdf</a></li>
-<li>📁 <a href="Unit 1 - Work/index.html">Unit 1 - Work</a></li>
-<li>📁 <a href="Unit 1 - Work - Language Reference/index.html">Unit 1 - Work - Language Reference</a></li>
-<li>📁 <a href="Unit 2 - IT History/index.html">Unit 2 - IT History</a></li>
-<li>📁 <a href="Unit 3 - Web Development & Web Design/index.html">Unit 3 - Web Development & Web Design</a></li>
-<li>📁 <a href="Unit 5 - Wordprocessing & Spreadsheets /index.html">Unit 5 - Wordprocessing & Spreadsheets </a></li>
-<li>📁 <a href="Unit 6 - Careers in Computing/index.html">Unit 6 - Careers in Computing</a></li>
+<ul>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A1_CB_049_TkP1_01.mp3">BP_A1_CB_049_TkP1_01.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A1_CB_050_TkP1_02.mp3">BP_A1_CB_050_TkP1_02.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A1_CB_051_TkP1_03.mp3">BP_A1_CB_051_TkP1_03.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A1_CB_052_TkP1_04.mp3">BP_A1_CB_052_TkP1_04.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A1_CB_053_TkP1_05.mp3">BP_A1_CB_053_TkP1_05.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A1_CB_054_TkP1_06.mp3">BP_A1_CB_054_TkP1_06.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A1_CB_055_TkP1_07.mp3">BP_A1_CB_055_TkP1_07.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A1_CB_056_TkP1_08.mp3">BP_A1_CB_056_TkP1_08.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A1_CB_057_TkP2_01.mp3">BP_A1_CB_057_TkP2_01.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A1_CB_058_TkP2_02.mp3">BP_A1_CB_058_TkP2_02.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A1_CB_059_TkP2_03.mp3">BP_A1_CB_059_TkP2_03.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A1_CB_060_TkP2_04.mp3">BP_A1_CB_060_TkP2_04.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A1_CB_061_TkP2_05.mp3">BP_A1_CB_061_TkP2_05.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A1_CB_062_TkP2_06.mp3">BP_A1_CB_062_TkP2_06.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A1_CB_063_TkP2_07.mp3">BP_A1_CB_063_TkP2_07.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A1_CB_064_TkP2_08.mp3">BP_A1_CB_064_TkP2_08.mp3</a></li>
+<li><span class="material-icons" style="color:#1565c0">description</span> <a href="Technical English I 2024_.docx">Technical English I 2024_.docx</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Unit 1 - Pronunciation.pdf">Unit 1 - Pronunciation.pdf</a></li>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="Unit 1 - Work/index.html">Unit 1 - Work</a></li>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="Unit 1 - Work - Language Reference/index.html">Unit 1 - Work - Language Reference</a></li>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="Unit 2 - IT History/index.html">Unit 2 - IT History</a></li>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="Unit 3 - Web Development & Web Design/index.html">Unit 3 - Web Development & Web Design</a></li>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="Unit 5 - Wordprocessing & Spreadsheets /index.html">Unit 5 - Wordprocessing & Spreadsheets </a></li>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="Unit 6 - Careers in Computing/index.html">Unit 6 - Careers in Computing</a></li>
   </ul>
+  <nav>
+    <a href="../index.html">⬅ Atrás</a> | 
+    <a href="../../../index.html">🏠 Inicio</a>
+  </nav>
+
 </body>
 </html>
