--- a/output/Segundo_anio/Analisis_sistema/mark_down/index.html
+++ b/output/Segundo_anio/Analisis_sistema/mark_down/index.html
@@ -4,29 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Segundo_anio/Analisis_sistema/mark_down</title>
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 1rem; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 0.5rem; font-size: 1.1rem; }
-    a { text-decoration: none; color: #007acc; }
-    a:hover { text-decoration: underline; }
-  </style>
+  <link rel="stylesheet" href="../../../../css/main.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <h1>Segundo_anio/Analisis_sistema/mark_down</h1>
-  <ul>
-<li>📦 <a href="analisis_de_sistemas_01_de_12.md">analisis_de_sistemas_01_de_12.md</a></li>
-<li>📦 <a href="analisis_de_sistemas_02_de_12.md">analisis_de_sistemas_02_de_12.md</a></li>
-<li>📦 <a href="analisis_de_sistemas_03_de_12.md">analisis_de_sistemas_03_de_12.md</a></li>
-<li>📦 <a href="analisis_de_sistemas_04_de_12.md">analisis_de_sistemas_04_de_12.md</a></li>
-<li>📦 <a href="analisis_de_sistemas_05_de_12.md">analisis_de_sistemas_05_de_12.md</a></li>
-<li>📦 <a href="analisis_de_sistemas_06_de_12.md">analisis_de_sistemas_06_de_12.md</a></li>
-<li>📦 <a href="analisis_de_sistemas_07_de_12.md">analisis_de_sistemas_07_de_12.md</a></li>
-<li>📦 <a href="analisis_de_sistemas_08_de_12.md">analisis_de_sistemas_08_de_12.md</a></li>
-<li>📦 <a href="analisis_de_sistemas_09_de_12.md">analisis_de_sistemas_09_de_12.md</a></li>
-<li>📦 <a href="analisis_de_sistemas_10_de_12.md">analisis_de_sistemas_10_de_12.md</a></li>
-<li>📦 <a href="analisis_de_sistemas_11_de_12.md">analisis_de_sistemas_11_de_12.md</a></li>
-<li>📦 <a href="analisis_de_sistemas_12_de_12.md">analisis_de_sistemas_12_de_12.md</a></li>
+<ul>
+<li><span class="material-icons" style="color:#616161">notes</span> <a href="analisis_de_sistemas_01_de_12.md">analisis_de_sistemas_01_de_12.md</a></li>
+<li><span class="material-icons" style="color:#616161">notes</span> <a href="analisis_de_sistemas_02_de_12.md">analisis_de_sistemas_02_de_12.md</a></li>
+<li><span class="material-icons" style="color:#616161">notes</span> <a href="analisis_de_sistemas_03_de_12.md">analisis_de_sistemas_03_de_12.md</a></li>
+<li><span class="material-icons" style="color:#616161">notes</span> <a href="analisis_de_sistemas_04_de_12.md">analisis_de_sistemas_04_de_12.md</a></li>
+<li><span class="material-icons" style="color:#616161">notes</span> <a href="analisis_de_sistemas_05_de_12.md">analisis_de_sistemas_05_de_12.md</a></li>
+<li><span class="material-icons" style="color:#616161">notes</span> <a href="analisis_de_sistemas_06_de_12.md">analisis_de_sistemas_06_de_12.md</a></li>
+<li><span class="material-icons" style="color:#616161">notes</span> <a href="analisis_de_sistemas_07_de_12.md">analisis_de_sistemas_07_de_12.md</a></li>
+<li><span class="material-icons" style="color:#616161">notes</span> <a href="analisis_de_sistemas_08_de_12.md">analisis_de_sistemas_08_de_12.md</a></li>
+<li><span class="material-icons" style="color:#616161">notes</span> <a href="analisis_de_sistemas_09_de_12.md">analisis_de_sistemas_09_de_12.md</a></li>
+<li><span class="material-icons" style="color:#616161">notes</span> <a href="analisis_de_sistemas_10_de_12.md">analisis_de_sistemas_10_de_12.md</a></li>
+<li><span class="material-icons" style="color:#616161">notes</span> <a href="analisis_de_sistemas_11_de_12.md">analisis_de_sistemas_11_de_12.md</a></li>
+<li><span class="material-icons" style="color:#616161">notes</span> <a href="analisis_de_sistemas_12_de_12.md">analisis_de_sistemas_12_de_12.md</a></li>
   </ul>
+  <nav>
+    <a href="../index.html">⬅ Atrás</a> | 
+    <a href="../../../index.html">🏠 Inicio</a>
+  </nav>
+
 </body>
 </html>
