--- a/output/Segundo_anio/Analisis_sistema/pdfs/index.html
+++ b/output/Segundo_anio/Analisis_sistema/pdfs/index.html
@@ -4,22 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Segundo_anio/Analisis_sistema/pdfs</title>
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 1rem; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 0.5rem; font-size: 1.1rem; }
-    a { text-decoration: none; color: #007acc; }
-    a:hover { text-decoration: underline; }
-  </style>
+  <link rel="stylesheet" href="../../../../css/main.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <h1>Segundo_anio/Analisis_sistema/pdfs</h1>
-  <ul>
-<li>📄 <a href="00_introduccion.pdf">00_introduccion.pdf</a></li>
-<li>📄 <a href="01_introduccion_analisis_y_diseno.pdf">01_introduccion_analisis_y_diseno.pdf</a></li>
-<li>📄 <a href="02_analisis_casos_negocios.pdf">02_analisis_casos_negocios.pdf</a></li>
-<li>📄 <a href="03_administrando_proyectos.pdf">03_administrando_proyectos.pdf</a></li>
-<li>📄 <a href="04_ingenieria_requerimientos.pdf">04_ingenieria_requerimientos.pdf</a></li>
+<ul>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="00_introduccion.pdf">00_introduccion.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="01_introduccion_analisis_y_diseno.pdf">01_introduccion_analisis_y_diseno.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="02_analisis_casos_negocios.pdf">02_analisis_casos_negocios.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="03_administrando_proyectos.pdf">03_administrando_proyectos.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="04_ingenieria_requerimientos.pdf">04_ingenieria_requerimientos.pdf</a></li>
   </ul>
+  <nav>
+    <a href="../index.html">⬅ Atrás</a> | 
+    <a href="../../../index.html">🏠 Inicio</a>
+  </nav>
+
 </body>
 </html>
