--- a/output/Segundo_anio/Edi_2/Scripts/index.html
+++ b/output/Segundo_anio/Edi_2/Scripts/index.html
@@ -7,55 +7,55 @@
 <body>
   <h1>Scripts de la materia</h1>
   <ul>
-<li><a href="arith-loop.sh" download>arith-loop.sh</a></li>
-<li><a href="array-2-4thEd.sh" download>array-2-4thEd.sh</a></li>
-<li><a href="array-lookup.sh" download>array-lookup.sh</a></li>
-<li><a href="array-mapfile.sh" download>array-mapfile.sh</a></li>
-<li><a href="array-multi.sh" download>array-multi.sh</a></li>
-<li><a href="array-sort.sh" download>array-sort.sh</a></li>
-<li><a href="async-child.sh" download>async-child.sh</a></li>
-<li><a href="async-parent.sh" download>async-parent.sh</a></li>
-<li><a href="average.sh" download>average.sh</a></li>
-<li><a href="case-menu.sh" download>case-menu.sh</a></li>
-<li><a href="distros.sh.txt" download>distros.sh.txt</a></li>
-<li><a href="file-info.sh" download>file-info.sh</a></li>
-<li><a href="getopts-test.sh" download>getopts-test.sh</a></li>
-<li><a href="hours.sh" download>hours.sh</a></li>
-<li><a href="loan-calc.sh" download>loan-calc.sh</a></li>
-<li><a href="local-vars.sh" download>local-vars.sh</a></li>
-<li><a href="longest-word.sh" download>longest-word.sh</a></li>
-<li><a href="longest-word2.sh" download>longest-word2.sh</a></li>
-<li><a href="longest-word3.sh" download>longest-word3.sh</a></li>
-<li><a href="modulo.sh" download>modulo.sh</a></li>
-<li><a href="modulo2.sh" download>modulo2.sh</a></li>
-<li><a href="posit-param.sh" download>posit-param.sh</a></li>
-<li><a href="posit-param2.sh" download>posit-param2.sh</a></li>
-<li><a href="posit-param3.sh" download>posit-param3.sh</a></li>
-<li><a href="read-ifs.sh" download>read-ifs.sh</a></li>
-<li><a href="read-integer.sh" download>read-integer.sh</a></li>
-<li><a href="read-menu.sh" download>read-menu.sh</a></li>
-<li><a href="read-multiple.sh" download>read-multiple.sh</a></li>
-<li><a href="read-secret.sh" download>read-secret.sh</a></li>
-<li><a href="read-single.sh" download>read-single.sh</a></li>
-<li><a href="read-validate.sh" download>read-validate.sh</a></li>
-<li><a href="simple_counter.sh" download>simple_counter.sh</a></li>
-<li><a href="sys_info_page.sh" download>sys_info_page.sh</a></li>
-<li><a href="test-integer.sh" download>test-integer.sh</a></li>
-<li><a href="test-integer2.sh" download>test-integer2.sh</a></li>
-<li><a href="test-integer2a.sh" download>test-integer2a.sh</a></li>
-<li><a href="test-integer3.sh" download>test-integer3.sh</a></li>
-<li><a href="test-integer4.sh" download>test-integer4.sh</a></li>
-<li><a href="test-string.sh" download>test-string.sh</a></li>
-<li><a href="trap-demo.sh" download>trap-demo.sh</a></li>
-<li><a href="trap-demo2.sh" download>trap-demo2.sh</a></li>
-<li><a href="trap-demo3.sh" download>trap-demo3.sh</a></li>
-<li><a href="ul-param.sh" download>ul-param.sh</a></li>
-<li><a href="until-count.sh" download>until-count.sh</a></li>
-<li><a href="while-count.sh" download>while-count.sh</a></li>
-<li><a href="while-menu.sh" download>while-menu.sh</a></li>
-<li><a href="while-menu2.sh" download>while-menu2.sh</a></li>
-<li><a href="while-read.sh" download>while-read.sh</a></li>
-<li><a href="while-read2.sh" download>while-read2.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="arith-loop.sh" download>arith-loop.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="array-2-4thEd.sh" download>array-2-4thEd.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="array-lookup.sh" download>array-lookup.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="array-mapfile.sh" download>array-mapfile.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="array-multi.sh" download>array-multi.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="array-sort.sh" download>array-sort.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="async-child.sh" download>async-child.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="async-parent.sh" download>async-parent.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="average.sh" download>average.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="case-menu.sh" download>case-menu.sh</a></li>
+<li><span class="material-icons" style="color:#616161">notes</span> <a href="distros.sh.txt" download>distros.sh.txt</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="file-info.sh" download>file-info.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="getopts-test.sh" download>getopts-test.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="hours.sh" download>hours.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="loan-calc.sh" download>loan-calc.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="local-vars.sh" download>local-vars.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="longest-word.sh" download>longest-word.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="longest-word2.sh" download>longest-word2.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="longest-word3.sh" download>longest-word3.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="modulo.sh" download>modulo.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="modulo2.sh" download>modulo2.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="posit-param.sh" download>posit-param.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="posit-param2.sh" download>posit-param2.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="posit-param3.sh" download>posit-param3.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="read-ifs.sh" download>read-ifs.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="read-integer.sh" download>read-integer.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="read-menu.sh" download>read-menu.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="read-multiple.sh" download>read-multiple.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="read-secret.sh" download>read-secret.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="read-single.sh" download>read-single.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="read-validate.sh" download>read-validate.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="simple_counter.sh" download>simple_counter.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="sys_info_page.sh" download>sys_info_page.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="test-integer.sh" download>test-integer.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="test-integer2.sh" download>test-integer2.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="test-integer2a.sh" download>test-integer2a.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="test-integer3.sh" download>test-integer3.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="test-integer4.sh" download>test-integer4.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="test-string.sh" download>test-string.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="trap-demo.sh" download>trap-demo.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="trap-demo2.sh" download>trap-demo2.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="trap-demo3.sh" download>trap-demo3.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="ul-param.sh" download>ul-param.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="until-count.sh" download>until-count.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="while-count.sh" download>while-count.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="while-menu.sh" download>while-menu.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="while-menu2.sh" download>while-menu2.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="while-read.sh" download>while-read.sh</a></li>
+<li><span class="material-icons" style="color:#757575">insert_drive_file</span> <a href="while-read2.sh" download>while-read2.sh</a></li>
   </ul>
   <a href="../index.html">⬅ Volver</a>
 </body>
