--- a/output/Segundo_anio/Edi_2/pdfs/index.html
+++ b/output/Segundo_anio/Edi_2/pdfs/index.html
@@ -4,35 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Segundo_anio/Edi_2/pdfs</title>
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 1rem; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 0.5rem; font-size: 1.1rem; }
-    a { text-decoration: none; color: #007acc; }
-    a:hover { text-decoration: underline; }
-  </style>
+  <link rel="stylesheet" href="../../../../css/main.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <h1>Segundo_anio/Edi_2/pdfs</h1>
-  <ul>
-<li>📄 <a href="AWTLCL-21.10.pdf">AWTLCL-21.10.pdf</a></li>
-<li>📄 <a href="La línea de comandos de Linux.pdf">La línea de comandos de Linux.pdf</a></li>
-<li>📄 <a href="TLCL-24.11.pdf">TLCL-24.11.pdf</a></li>
-<li>📄 <a href="edi2_00_links.pdf">edi2_00_links.pdf</a></li>
-<li>📄 <a href="edi2_01_debian.pdf">edi2_01_debian.pdf</a></li>
-<li>📄 <a href="edi2_02_cli_01.pdf">edi2_02_cli_01.pdf</a></li>
-<li>📄 <a href="edi2_02_cli_02.pdf">edi2_02_cli_02.pdf</a></li>
-<li>📄 <a href="edi2_02_cli_03.pdf">edi2_02_cli_03.pdf</a></li>
-<li>📄 <a href="edi2_02_cli_04.pdf">edi2_02_cli_04.pdf</a></li>
-<li>📄 <a href="edi2_02_cli_05.pdf">edi2_02_cli_05.pdf</a></li>
-<li>📄 <a href="edi2_03_git_01.pdf">edi2_03_git_01.pdf</a></li>
-<li>📄 <a href="edi2_03_git_02.pdf">edi2_03_git_02.pdf</a></li>
-<li>📄 <a href="edi2_04_network.pdf">edi2_04_network.pdf</a></li>
-<li>📄 <a href="edi2_05_restful_api.pdf">edi2_05_restful_api.pdf</a></li>
-<li>📄 <a href="edi2_06_lc_01.pdf">edi2_06_lc_01.pdf</a></li>
-<li>📄 <a href="edi2_06_lc_02.pdf">edi2_06_lc_02.pdf</a></li>
-<li>📄 <a href="edi2_06_lc_03.pdf">edi2_06_lc_03.pdf</a></li>
-<li>📄 <a href="thelinuxcommandline.pdf">thelinuxcommandline.pdf</a></li>
+<ul>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="AWTLCL-21.10.pdf">AWTLCL-21.10.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="La línea de comandos de Linux.pdf">La línea de comandos de Linux.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="TLCL-24.11.pdf">TLCL-24.11.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="edi2_00_links.pdf">edi2_00_links.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="edi2_01_debian.pdf">edi2_01_debian.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="edi2_02_cli_01.pdf">edi2_02_cli_01.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="edi2_02_cli_02.pdf">edi2_02_cli_02.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="edi2_02_cli_03.pdf">edi2_02_cli_03.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="edi2_02_cli_04.pdf">edi2_02_cli_04.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="edi2_02_cli_05.pdf">edi2_02_cli_05.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="edi2_03_git_01.pdf">edi2_03_git_01.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="edi2_03_git_02.pdf">edi2_03_git_02.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="edi2_04_network.pdf">edi2_04_network.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="edi2_05_restful_api.pdf">edi2_05_restful_api.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="edi2_06_lc_01.pdf">edi2_06_lc_01.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="edi2_06_lc_02.pdf">edi2_06_lc_02.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="edi2_06_lc_03.pdf">edi2_06_lc_03.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="thelinuxcommandline.pdf">thelinuxcommandline.pdf</a></li>
   </ul>
+  <nav>
+    <a href="../index.html">⬅ Atrás</a> | 
+    <a href="../../../index.html">🏠 Inicio</a>
+  </nav>
+
 </body>
 </html>
