--- a/output/Segundo_anio/English/index.html
+++ b/output/Segundo_anio/English/index.html
@@ -4,23 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Segundo_anio/English</title>
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 1rem; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 0.5rem; font-size: 1.1rem; }
-    a { text-decoration: none; color: #007acc; }
-    a:hover { text-decoration: underline; }
-  </style>
+  <link rel="stylesheet" href="../../../css/main.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <h1>Segundo_anio/English</h1>
-  <ul>
-<li>📁 <a href="audios/index.html">audios</a></li>
-<li>📁 <a href="docs/index.html">docs</a></li>
-<li>📚 <a href="html/enlaces.html">html → enlaces.html</a></li>
-<li>📁 <a href="images/index.html">images</a></li>
-<li>📁 <a href="pdfs/index.html">pdfs</a></li>
-<li>📁 <a href="videos/index.html">videos</a></li>
+<ul>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="audios/index.html">audios</a></li>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="docs/index.html">docs</a></li>
+<li><span class="material-icons" style="color:#8e24aa">menu_book</span> <a href="html/enlaces.html">html → enlaces.html</a></li>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="images/index.html">images</a></li>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="pdfs/index.html">pdfs</a></li>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="videos/index.html">videos</a></li>
   </ul>
+  <nav>
+    <a href="../index.html">⬅ Atrás</a> | 
+    <a href="../../index.html">🏠 Inicio</a>
+  </nav>
+
 </body>
 </html>
