--- a/output/index.html
+++ b/output/index.html
@@ -4,20 +4,101 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio</title>
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 1rem; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 0.5rem; font-size: 1.1rem; }
-    a { text-decoration: none; color: #007acc; }
-    a:hover { text-decoration: underline; }
-  </style>
+  <link rel="stylesheet" href="../css/main.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <h1>Inicio</h1>
-  <ul>
-<li>📁 <a href="Primer_anio/index.html">Primer_anio</a></li>
-<li>📁 <a href="Segundo_anio/index.html">Segundo_anio</a></li>
-<li>📁 <a href="linux/index.html">linux</a></li>
+<ul>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="Primer_anio/index.html">Primer_anio</a></li>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="Segundo_anio/index.html">Segundo_anio</a></li>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="linux/index.html">linux</a></li>
   </ul>
+  <nav>
+    
+    <a href="index.html">🏠 Inicio</a>
+  </nav>
+<section><h2>Artículos recientes de Xataka</h2>
+      <ul class="cards-xataka"><li class="card-xataka">
+          <img src="https://i.blogs.es/88cf76/espana-hackers-portada/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/seguridad/misterioso-grupo-hackers-careto-se-encontraba-agente-inesperado-gobierno-espana-techcrunch" target="_blank">Tras el misterioso grupo de hackers Careto se encontraba un agente inesperado: el Gobierno de España, según TechCrunch</a>
+          <small>El grupo apareció hace más de una década y operó durante varios años.</small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/6caf06/xiaomixring-ap/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/empresas-y-economia/soc-xring-o1-prodigio-imposible-asi-como-xiaomi-ha-esquivado-exigentes-restricciones-eeuu" target="_blank">El SoC XRing O1 es un prodigio "imposible". Así es como Xiaomi ha esquivado las exigentes restricciones de EEUU</a>
+          <small>El SoC XRing O1 de Xiaomi está haciendo un ruido atronador.</small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/610086/claude-portada/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/robotica-e-ia/anthropic-saca-pecho-aluvion-google-ia-lanza-que-dice-que-mejor-modelo-programacion-mundo" target="_blank">Anthropic saca pecho tras el aluvión de Google: lanza Claude Opus 4 y lo presenta como el mejor modelo de programación del mundo</a>
+          <small>Claude Opus 4 y Sonnet 4 ya están disponibles. Anthropic sube el listón en programación, memoria a l</small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/3c856d/tsmc-ap/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/empresas-y-economia/inversores-taiwan-se-estan-preparando-para-hipotetica-invasion-china-no-saben-donde-esconderse" target="_blank">Los inversores de Taiwán se están preparando para una hipotética invasión por China. Y no saben dónde esconderse</a>
+          <small>El regreso de Donald Trump a la Casa Blanca ha marcado un punto de inflexión en la relación que sost</small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/6fb5e9/ive-apple-portada/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/empresas-y-economia/openai-acaba-estrechar-lazos-adn-apple-va-a-comprar-empresa-disenador-que-marco-era-cupertino" target="_blank">OpenAI compra la empresa de dispositivos de Jony Ive por $6.500 millones: el diseñador del iPhone original se alía con Altman</a>
+          <small>Con esta operación la IA sale de la nube y se prepara para aterrizar en el mundo del hardware.</small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/b9025d/jsr-ap/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/empresas-y-economia/japon-no-puede-permitirse-que-caiga-su-empresa-valiosa-industria-chips-esta-sumida-deudas" target="_blank">Japón no puede permitirse que caiga su empresa más valiosa en la industria de los chips. Y está sumida en deudas</a>
+          <small>JSR Corporation es una compañía extraordinariamente valiosa para Japón, aunque no en un sentido estr</small>
+        </li><li class="card-xataka">
+          
+          <a href="https://www.xataka.com/moviles/xiaomi-15-ultra-a-fondo-video-mejor-movil-camara-espectacular-partes-que-necesitan-pulirse" target="_blank">Xiaomi 15 Ultra a fondo en vídeo: lo mejor de un móvil con una cámara espectacular y las partes que aún necesitan pulirse</a>
+          <small>El Xiaomi 15 Ultra quiere ser el nuevo referente en fotografía móvil. En este 24/7 lo hemos puesto a</small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/d940b6/xiaomi-ap/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/empresas-y-economia/gobierno-chino-elogia-chip-3-nm-xiaomi-como-hito-camino-autosuficiencia-problema-que-no-fabrica-china" target="_blank">El Gobierno chino elogia el chip de 3 nm de Xiaomi como un hito en el camino hacia la autosuficiencia. El problema es que no lo fabrica China</a>
+          <small>El SoC XRing O1 es objetivamente un hito en la historia de Xiaomi. Y lo es porque abre de par en par</small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/c00cb3/lgoledc5-ap/500_333.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/analisis/lg-oled-c5-analisis-caracteristicas-precio-especificaciones" target="_blank">LG OLED C5, análisis: lo hace todo tan bien que nos obliga a plantearnos si tiene sentido gastar más en un televisor OLED</a>
+          <small>Su rendimiento con películas y series es muy bueno. Con videojuegos es incluso mejor.</small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/dd74e1/google-i-o-2025-resumen/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/eventos/ai-mode-project-beam-veo-3-gafas-project-aura-jules-todo-presentado-google-i-2025-cargado-ambicion" target="_blank">AI Mode, Project Beam, Veo 3, las gafas Project Aura, Jules y todo lo presentado en un Google I/O 2025 cargado de ambición</a>
+          <small>En este artículo podrás comprobar de un vistazo todas las novedades anunciadas este martes por Googl</small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/d4d2b4/google-project-aura/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/realidad-virtual-aumentada/google-enseno-primera-vez-sus-nuevas-gafas-demo-real-imprevisto-directo-apuesta-que-apunta-lejos" target="_blank">Google enseñó por primera vez sus nuevas gafas con una demo real: un imprevisto en directo y una apuesta que apunta lejos </a>
+          <small>Google quiere volver a intentarlo con las gafas. Esta vez, lo hace con aliados. </small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/a79941/google-beam-portada/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/robotica-e-ia/google-acaba-anunciar-cercano-a-llamadas-holograficas-ciencia-ficcion-project-beam" target="_blank">Google acaba de anunciar lo más cercano a las llamadas holográficas de la ciencia ficción: Project Beam </a>
+          <small>Google quiere que las llamadas dejen de parecer llamadas. Beam promete presencia real sin moverse de</small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/537195/google-ai-compras-portada/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/robotica-e-ia/buscador-no-busca-ahora-compra-ti-paga-cuenta-que-toques-boton" target="_blank">El buscador de Google ya no busca: ahora compra por ti y paga la cuenta sin que toques un botón</a>
+          <small>El buscador quiere dejar de ser una herramienta y convertirse en tu asistente personal. Y ya ha empe</small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/f3397e/ada-space/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/espacio/china-acaba-dar-otro-paso-conquista-tecnologica-espacial-red-computacion-orbital-disenada-para-ia" target="_blank">China acaba de dar otro paso en la conquista tecnológica y espacial: una red de computación orbital diseñada para IA</a>
+          <small>Los centros de datos ya no son cosa de la Tierra. China quiere operar modelos de IA directamente des</small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/402d1b/23-and-me-portada/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/empresas-y-economia/12-millones-personas-entregaron-su-adn-a-23andme-empresa-quebro-sus-datos-estan-a-punto-cambiar-manos" target="_blank">12 millones de personas entregaron su ADN a 23andMe. La empresa quebró y sus datos están a punto de cambiar de manos</a>
+          <small>La compañía que popularizó los test genéticos caseros entra en una nueva etapa.</small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/c884bd/samsung-ap/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/empresas-y-economia/samsung-intenta-noquear-a-tsmc-unica-forma-posible-convenciendo-a-nvidia-qualcomm-superioridad-sus-2-nm" target="_blank">Samsung intenta noquear a TSMC de la única forma posible: convenciendo a NVIDIA y Qualcomm de la superioridad de sus 2 nm</a>
+          <small>La filial de Samsung especializada en la fabricación de semiconductores es en gran medida el motor d</small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/b98680/tsmc-ap/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/empresas-y-economia/tsmc-va-a-subir-precio-sus-obleas-chips-10-2025-usuarios-no-vamos-a-poder-esquivar-este-golpe" target="_blank">TSMC va a subir el precio de sus obleas de chips un 10% en 2025. Y los usuarios no vamos a poder esquivar este golpe</a>
+          <small>NVIDIA ha decidido aumentar el precio de sus GPU para juegos entre un 5 y un 10%. Y el de sus chips </small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/bf56eb/smic-ap/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/empresas-y-economia/china-esta-a-punto-tener-capacidad-fabricar-chips-5-nm-se-enfrenta-a-problema-dificil-solucion" target="_blank">China está a punto de tener la capacidad de fabricar chips de 5 nm, aunque se enfrenta a un problema de difícil solución</a>
+          <small>SMIC (Semiconductor Manufacturing International Corp), el mayor fabricante chino de semiconductores,</small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/5961cb/hack-de-cafetera/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/seguridad/hackear-cafetera-como-programador-invirtio-100-horas-trabajo-para-ahorrar-30-segundos-al-dia-pura-cabezoneria" target="_blank">A un programador no le gustaba cómo extraía el café su cafetera. Así que dedicó 100 horas para hackearla</a>
+          <small>Un programador de software no estaba contento con su cafetera e hizo lo único que se puede hacer: ha</small>
+        </li><li class="card-xataka">
+          <img src="https://i.blogs.es/ba08ae/codex_blog_header_v4__1_/200_200.jpeg" alt="Imagen">
+          <a href="https://www.xataka.com/robotica-e-ia/openai-acaba-lanzar-su-nuevo-agente-programacion-interesante-que-puede-hacer-cuando-nadie-mira" target="_blank">OpenAI acaba de lanzar su nuevo agente de programación. Lo interesante es lo que puede hacer cuando nadie lo mira</a>
+          <small>Lo último de OpenAI es un agente especializado en tareas de desarrollo.</small>
+        </li></ul></section>
 </body>
 </html>
