--- a/output/linux/index.html
+++ b/output/linux/index.html
@@ -4,28 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>linux</title>
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 1rem; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 0.5rem; font-size: 1.1rem; }
-    a { text-decoration: none; color: #007acc; }
-    a:hover { text-decoration: underline; }
-  </style>
+  <link rel="stylesheet" href="../../css/main.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <h1>linux</h1>
-  <ul>
-<li>📚 <a href="html/bash_error_command_not_found.html">html → bash_error_command_not_found.html</a></li>
-<li>📚 <a href="html/bios.html">html → bios.html</a></li>
-<li>📚 <a href="html/creacion_de_instalador_de_manjaro_personalizado.html">html → creacion_de_instalador_de_manjaro_personalizado.html</a></li>
-<li>📚 <a href="html/distros.html">html → distros.html</a></li>
-<li>📚 <a href="html/error_user_is_not_in_sudoers.html">html → error_user_is_not_in_sudoers.html</a></li>
-<li>📚 <a href="html/instalacion.html">html → instalacion.html</a></li>
-<li>📚 <a href="html/metodo_recuperacion.html">html → metodo_recuperacion.html</a></li>
-<li>📚 <a href="html/preparacion.html">html → preparacion.html</a></li>
-<li>📚 <a href="html/recomendacion.html">html → recomendacion.html</a></li>
-<li>📚 <a href="html/ventoy.html">html → ventoy.html</a></li>
-<li>📚 <a href="html/visudo.html">html → visudo.html</a></li>
+<ul>
+<li><span class="material-icons" style="color:#8e24aa">menu_book</span> <a href="html/bash_error_command_not_found.html">html → bash_error_command_not_found.html</a></li>
+<li><span class="material-icons" style="color:#8e24aa">menu_book</span> <a href="html/bios.html">html → bios.html</a></li>
+<li><span class="material-icons" style="color:#8e24aa">menu_book</span> <a href="html/creacion_de_instalador_de_manjaro_personalizado.html">html → creacion_de_instalador_de_manjaro_personalizado.html</a></li>
+<li><span class="material-icons" style="color:#8e24aa">menu_book</span> <a href="html/distros.html">html → distros.html</a></li>
+<li><span class="material-icons" style="color:#8e24aa">menu_book</span> <a href="html/error_user_is_not_in_sudoers.html">html → error_user_is_not_in_sudoers.html</a></li>
+<li><span class="material-icons" style="color:#8e24aa">menu_book</span> <a href="html/instalacion.html">html → instalacion.html</a></li>
+<li><span class="material-icons" style="color:#8e24aa">menu_book</span> <a href="html/metodo_recuperacion.html">html → metodo_recuperacion.html</a></li>
+<li><span class="material-icons" style="color:#8e24aa">menu_book</span> <a href="html/preparacion.html">html → preparacion.html</a></li>
+<li><span class="material-icons" style="color:#8e24aa">menu_book</span> <a href="html/recomendacion.html">html → recomendacion.html</a></li>
+<li><span class="material-icons" style="color:#8e24aa">menu_book</span> <a href="html/ventoy.html">html → ventoy.html</a></li>
+<li><span class="material-icons" style="color:#8e24aa">menu_book</span> <a href="html/visudo.html">html → visudo.html</a></li>
   </ul>
+  <nav>
+    <a href="../index.html">⬅ Atrás</a> | 
+    <a href="../index.html">🏠 Inicio</a>
+  </nav>
+
 </body>
 </html>
