--- a/output/Primer_anio/English/1 - Technical English I 2024/Unit 1 - Work - Language Reference/index.html
+++ b/output/Primer_anio/English/1 - Technical English I 2024/Unit 1 - Work - Language Reference/index.html
@@ -4,23 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Primer_anio/English/1 - Technical English I 2024/Unit 1 - Work - Language Reference</title>
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 1rem; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 0.5rem; font-size: 1.1rem; }
-    a { text-decoration: none; color: #007acc; }
-    a:hover { text-decoration: underline; }
-  </style>
+  <link rel="stylesheet" href="../../../../../css/main.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <h1>Primer_anio/English/1 - Technical English I 2024/Unit 1 - Work - Language Reference</h1>
-  <ul>
-<li>🖼️ <a href="1 - Present Simple of TO BE.png">1 - Present Simple of TO BE.png</a></li>
-<li>🖼️ <a href="2 - Present_Simple.png">2 - Present_Simple.png</a></li>
-<li>🖼️ <a href="3 - Present_Simple_-_Spelling_Rules.png">3 - Present_Simple_-_Spelling_Rules.png</a></li>
-<li>📦 <a href="4 - Unit 1 - Grammar Practice with Key.docx">4 - Unit 1 - Grammar Practice with Key.docx</a></li>
-<li>📄 <a href="5 - Unit 1 - Language Review.pdf">5 - Unit 1 - Language Review.pdf</a></li>
-<li>📦 <a href="6 - TO BE  - TO HAVE - A-AN - Links.docx">6 - TO BE  - TO HAVE - A-AN - Links.docx</a></li>
+<ul>
+<li><span class="material-icons" style="color:#1976d2">image</span> <a href="1 - Present Simple of TO BE.png">1 - Present Simple of TO BE.png</a></li>
+<li><span class="material-icons" style="color:#1976d2">image</span> <a href="2 - Present_Simple.png">2 - Present_Simple.png</a></li>
+<li><span class="material-icons" style="color:#1976d2">image</span> <a href="3 - Present_Simple_-_Spelling_Rules.png">3 - Present_Simple_-_Spelling_Rules.png</a></li>
+<li><span class="material-icons" style="color:#1565c0">description</span> <a href="4 - Unit 1 - Grammar Practice with Key.docx">4 - Unit 1 - Grammar Practice with Key.docx</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="5 - Unit 1 - Language Review.pdf">5 - Unit 1 - Language Review.pdf</a></li>
+<li><span class="material-icons" style="color:#1565c0">description</span> <a href="6 - TO BE  - TO HAVE - A-AN - Links.docx">6 - TO BE  - TO HAVE - A-AN - Links.docx</a></li>
   </ul>
+  <nav>
+    <a href="../index.html">⬅ Atrás</a> | 
+    <a href="../../../../index.html">🏠 Inicio</a>
+  </nav>
+
 </body>
 </html>
