--- a/output/Segundo_anio/Analisis_matematico/index.html
+++ b/output/Segundo_anio/Analisis_matematico/index.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Segundo_anio/Analisis_matematico</title>
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 1rem; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 0.5rem; font-size: 1.1rem; }
-    a { text-decoration: none; color: #007acc; }
-    a:hover { text-decoration: underline; }
-  </style>
+  <link rel="stylesheet" href="../../../css/main.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <h1>Segundo_anio/Analisis_matematico</h1>
-  <ul>
-<li>📁 <a href="imagenes/index.html">imagenes</a></li>
-<li>📁 <a href="pdfs/index.html">pdfs</a></li>
+<ul>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="imagenes/index.html">imagenes</a></li>
+<li><span class="material-icons" style="color:#1976d2">folder</span> <a href="pdfs/index.html">pdfs</a></li>
   </ul>
+  <nav>
+    <a href="../index.html">⬅ Atrás</a> | 
+    <a href="../../index.html">🏠 Inicio</a>
+  </nav>
+
 </body>
 </html>
