--- a/output/Segundo_anio/English/audios/index.html
+++ b/output/Segundo_anio/English/audios/index.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Segundo_anio/English/audios</title>
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 1rem; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 0.5rem; font-size: 1.1rem; }
-    a { text-decoration: none; color: #007acc; }
-    a:hover { text-decoration: underline; }
-  </style>
+  <link rel="stylesheet" href="../../../../css/main.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <h1>Segundo_anio/English/audios</h1>
-  <ul>
-<li>🔊 <a href="BP_A2_CB_Tk_8_01.mp3">BP_A2_CB_Tk_8_01.mp3</a></li>
-<li>🔊 <a href="Interviews_-_Extra_Practice_-_Audio_1.mp3">Interviews_-_Extra_Practice_-_Audio_1.mp3</a></li>
-<li>🔊 <a href="Interviews_-_Extra_Practice_-_Audio_2.mp3">Interviews_-_Extra_Practice_-_Audio_2.mp3</a></li>
-<li>🔊 <a href="Interviews_-_Extra_Practice_-_Audio_3.mp3">Interviews_-_Extra_Practice_-_Audio_3.mp3</a></li>
+<ul>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="BP_A2_CB_Tk_8_01.mp3">BP_A2_CB_Tk_8_01.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="Interviews_-_Extra_Practice_-_Audio_1.mp3">Interviews_-_Extra_Practice_-_Audio_1.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="Interviews_-_Extra_Practice_-_Audio_2.mp3">Interviews_-_Extra_Practice_-_Audio_2.mp3</a></li>
+<li><span class="material-icons" style="color:#388e3c">audiotrack</span> <a href="Interviews_-_Extra_Practice_-_Audio_3.mp3">Interviews_-_Extra_Practice_-_Audio_3.mp3</a></li>
   </ul>
+  <nav>
+    <a href="../index.html">⬅ Atrás</a> | 
+    <a href="../../../index.html">🏠 Inicio</a>
+  </nav>
+
 </body>
 </html>
