--- a/output/Segundo_anio/English/pdfs/index.html
+++ b/output/Segundo_anio/English/pdfs/index.html
@@ -4,34 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Segundo_anio/English/pdfs</title>
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 1rem; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 0.5rem; font-size: 1.1rem; }
-    a { text-decoration: none; color: #007acc; }
-    a:hover { text-decoration: underline; }
-  </style>
+  <link rel="stylesheet" href="../../../../css/main.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <h1>Segundo_anio/English/pdfs</h1>
-  <ul>
-<li>📄 <a href="2_-_Unit_2_-_A_Job_Interview_-_Script.pdf">2_-_Unit_2_-_A_Job_Interview_-_Script.pdf</a></li>
-<li>📄 <a href="Interviews - Extra Practice.pdf">Interviews - Extra Practice.pdf</a></li>
-<li>📄 <a href="List of Irregular Verbs.pdf">List of Irregular Verbs.pdf</a></li>
-<li>📄 <a href="Past Simple - Revision.pdf">Past Simple - Revision.pdf</a></li>
-<li>📄 <a href="Past_Simple_-_Revision.pdf">Past_Simple_-_Revision.pdf</a></li>
-<li>📄 <a href="Past_Simple_Revision_-_Answers.pdf">Past_Simple_Revision_-_Answers.pdf</a></li>
-<li>📄 <a href="Plan_de_Estudio_-_Tecnicatura_Superior_en_Analisis_Desarrollo_y_Programacion_de_Aplicaciones.pdf">Plan_de_Estudio_-_Tecnicatura_Superior_en_Analisis_Desarrollo_y_Programacion_de_Aplicaciones.pdf</a></li>
-<li>📄 <a href="Professional_Profile_-_Jay_Peters.pdf">Professional_Profile_-_Jay_Peters.pdf</a></li>
-<li>📄 <a href="Reducing Costs - Answers.pdf">Reducing Costs - Answers.pdf</a></li>
-<li>📄 <a href="Rubric - English.pdf">Rubric - English.pdf</a></li>
-<li>📄 <a href="Unit 1 - An Introduction to Emails.pdf">Unit 1 - An Introduction to Emails.pdf</a></li>
-<li>📄 <a href="Unit 1 - Audio Files & Videos - Answers.pdf">Unit 1 - Audio Files & Videos - Answers.pdf</a></li>
-<li>📄 <a href="Unit 1 - Jobs.pdf">Unit 1 - Jobs.pdf</a></li>
-<li>📄 <a href="Unit_1_-_Review_-_Answers.pdf">Unit_1_-_Review_-_Answers.pdf</a></li>
-<li>📄 <a href="Unit_1_-_Review_-_Page_94.pdf">Unit_1_-_Review_-_Page_94.pdf</a></li>
-<li>📄 <a href="Unit_2_-_A_Job_Interview.pdf">Unit_2_-_A_Job_Interview.pdf</a></li>
-<li>📄 <a href="Unit_2_-_Job_Interview_-_Answers.pdf">Unit_2_-_Job_Interview_-_Answers.pdf</a></li>
+<ul>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="2_-_Unit_2_-_A_Job_Interview_-_Script.pdf">2_-_Unit_2_-_A_Job_Interview_-_Script.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Interviews - Extra Practice.pdf">Interviews - Extra Practice.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="List of Irregular Verbs.pdf">List of Irregular Verbs.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Past Simple - Revision.pdf">Past Simple - Revision.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Past_Simple_-_Revision.pdf">Past_Simple_-_Revision.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Past_Simple_Revision_-_Answers.pdf">Past_Simple_Revision_-_Answers.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Plan_de_Estudio_-_Tecnicatura_Superior_en_Analisis_Desarrollo_y_Programacion_de_Aplicaciones.pdf">Plan_de_Estudio_-_Tecnicatura_Superior_en_Analisis_Desarrollo_y_Programacion_de_Aplicaciones.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Professional_Profile_-_Jay_Peters.pdf">Professional_Profile_-_Jay_Peters.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Reducing Costs - Answers.pdf">Reducing Costs - Answers.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Rubric - English.pdf">Rubric - English.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Unit 1 - An Introduction to Emails.pdf">Unit 1 - An Introduction to Emails.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Unit 1 - Audio Files & Videos - Answers.pdf">Unit 1 - Audio Files & Videos - Answers.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Unit 1 - Jobs.pdf">Unit 1 - Jobs.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Unit_1_-_Review_-_Answers.pdf">Unit_1_-_Review_-_Answers.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Unit_1_-_Review_-_Page_94.pdf">Unit_1_-_Review_-_Page_94.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Unit_2_-_A_Job_Interview.pdf">Unit_2_-_A_Job_Interview.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Unit_2_-_Job_Interview_-_Answers.pdf">Unit_2_-_Job_Interview_-_Answers.pdf</a></li>
   </ul>
+  <nav>
+    <a href="../index.html">⬅ Atrás</a> | 
+    <a href="../../../index.html">🏠 Inicio</a>
+  </nav>
+
 </body>
 </html>
