--- a/output/Segundo_anio/English/videos/index.html
+++ b/output/Segundo_anio/English/videos/index.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Segundo_anio/English/videos</title>
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 1rem; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 0.5rem; font-size: 1.1rem; }
-    a { text-decoration: none; color: #007acc; }
-    a:hover { text-decoration: underline; }
-  </style>
+  <link rel="stylesheet" href="../../../../css/main.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <h1>Segundo_anio/English/videos</h1>
-  <ul>
-<li>📄 <a href="COMMUNICATION 1 - Video Comprehension.pdf">COMMUNICATION 1 - Video Comprehension.pdf</a></li>
+<ul>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="COMMUNICATION 1 - Video Comprehension.pdf">COMMUNICATION 1 - Video Comprehension.pdf</a></li>
   </ul>
+  <nav>
+    <a href="../index.html">⬅ Atrás</a> | 
+    <a href="../../../index.html">🏠 Inicio</a>
+  </nav>
+
 </body>
 </html>
