--- a/output/Segundo_anio/Poo/pdfs/index.html
+++ b/output/Segundo_anio/Poo/pdfs/index.html
@@ -4,23 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Segundo_anio/Poo/pdfs</title>
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 1rem; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 0.5rem; font-size: 1.1rem; }
-    a { text-decoration: none; color: #007acc; }
-    a:hover { text-decoration: underline; }
-  </style>
+  <link rel="stylesheet" href="../../../../css/main.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <h1>Segundo_anio/Poo/pdfs</h1>
-  <ul>
-<li>📄 <a href="Clase - 00 - Repaso Inicial II.pdf">Clase - 00 - Repaso Inicial II.pdf</a></li>
-<li>📄 <a href="Clase - 00 - Repaso Inicial.pdf">Clase - 00 - Repaso Inicial.pdf</a></li>
-<li>📄 <a href="Clase - 01.pdf">Clase - 01.pdf</a></li>
-<li>📄 <a href="Clase - 02.pdf">Clase - 02.pdf</a></li>
-<li>📄 <a href="Practico 1 de Repaso.pdf">Practico 1 de Repaso.pdf</a></li>
-<li>📄 <a href="Practico 2 de Repaso.pdf">Practico 2 de Repaso.pdf</a></li>
+<ul>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Clase - 00 - Repaso Inicial II.pdf">Clase - 00 - Repaso Inicial II.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Clase - 00 - Repaso Inicial.pdf">Clase - 00 - Repaso Inicial.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Clase - 01.pdf">Clase - 01.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Clase - 02.pdf">Clase - 02.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Practico 1 de Repaso.pdf">Practico 1 de Repaso.pdf</a></li>
+<li><span class="material-icons" style="color:#d32f2f">picture_as_pdf</span> <a href="Practico 2 de Repaso.pdf">Practico 2 de Repaso.pdf</a></li>
   </ul>
+  <nav>
+    <a href="../index.html">⬅ Atrás</a> | 
+    <a href="../../../index.html">🏠 Inicio</a>
+  </nav>
+
 </body>
 </html>
